chore: migliorie varie su notifiche, documentazione e cleanup
- Aggiornato stile CSS per notifiche
- Aggiunto collegamento alla documentazione su github
- Rimossi file obsoleti
- Fix minori su layout

--- a/progetti-collaborativi/login.html
+++ b/progetti-collaborativi/login.html
@@ -34,7 +34,7 @@
             <h2 class="logo-login">ProCol</h2>
             <div class="navbar-login">
                 <a href="home.html">Home</a>
-                <a href="Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a>
+                <a href="https://github.com/LuigiPuca/Procol-Progetti-Collaborativi/blob/main/Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a>
                 <a href="mailto:luigi.puca3@studenti.unicampania.it?subject=%5BProCol%5D%20%2D%20Inserire%20qui%20l'%20Oggetto&body=Inserire%20qui%20una%20descrizione" target="_blank">Contattaci</a>
                 <button class="popup--apri">Accedi</button>
                 <button class="logout">Esci</button>
@@ -118,7 +118,7 @@
         <div class="footer-login">
             <div class="navbar-login">
                 <a href="#">Home</a>
-                <a href="Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a>
+                <a href="https://github.com/LuigiPuca/Procol-Progetti-Collaborativi/blob/main/Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a>
                 <a href="mailto:luigi.puca3@studenti.unicampania.it?subject=%5BProCol%5D%20%2D%20Inserire%20qui%20l'%20Oggetto&body=Inserire%20qui%20una%20descrizione" target="_blank">Contattaci</a>
             </div>   
         </div>
