--- a/progetti-collaborativi/team.html
+++ b/progetti-collaborativi/team.html
@@ -43,7 +43,7 @@
                             <div class="dropdown-content" id="d0"></div>
                         </div>
                     </li>
-                    <li><a href="Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a></li>
+                    <li><a href="https://github.com/LuigiPuca/Procol-Progetti-Collaborativi/blob/main/Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a></li>
                     <li><a href="mailto:luigi.puca3@studenti.unicampania.it?subject=%5BProCol%5D%20%2D%20Inserire%20qui%20l'%20Oggetto&body=Inserire%20qui%20una%20descrizione" target="_blank">Contattaci</a></li>
                     <li class="scroll-a-dx">&#8250</li>
                 </ul>
@@ -83,7 +83,7 @@
                 <div class="footer-bar">
                     <ul>
                         <li><a href="home.html">Home</a></li>
-                        <li><a href="Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a></li>
+                        <li><a href="https://github.com/LuigiPuca/Procol-Progetti-Collaborativi/blob/main/Specifica%20Requisiti%20-%20Progetti%20Collaborativi.pdf" target="_blank">Documentazione</a></li>
                         <li><a href="mailto:luigi.puca3@studenti.unicampania.it?subject=%5BProCol%5D%20%2D%20Inserire%20qui%20l'%20Oggetto&body=Inserire%20qui%20una%20descrizione" target="_blank">Contattaci</a></li>
                     </ul>
                 </div>
