--- a/progetti-collaborativi/login.html
+++ b/progetti-collaborativi/login.html
@@ -45,7 +45,7 @@
             <span class="popup--chiudi"><ion-icon name="close"></ion-icon></span>
             <div class="form-login --login">
                 <h2>Accesso</h2>
-                <form method="post" action="services/login.php">
+                <form method="post" action="services/controllers/login.php">
                     <div class="input-login">
                         <span class="icon"><ion-icon name="mail"></ion-icon></span>
                         <input type="email" name="email" minlength="1" maxlength="255" required>
