refactor(php) da Procedurale a logica OOP(02)
Aggiunge e modifica file nella cartella services.
- controllers:
    - register.php: servizio che si occupa della registrazione Utente;
- core:
    - Database.php: rinominato da database.php, ora in logica OOP per
        risolvere problemi di interazione col db, e per impossibilitare
        la creazione di connessioni multiple;
    - AuthManager.php: nuovo metodo per la registrazione;
- utils:
    - sanitizzazione.php: modificate e aggiunte funzioni per
        sanitizzare i dati;
Altre modifiche
- portal.html: ridenominazione di login.html per meglio definire la
    multifunzionalità della pagina;
- redirect.html: ridenominazione di error.html per sottolineare lo
    scopo della pagina, non più limitato ai soli errori;
- aggiorna per questioni di corrispondenza tutti i file html, js e
    php che hanno un collegamento con i file modificati

--- a/progetti-collaborativi/board.html
+++ b/progetti-collaborativi/board.html
@@ -54,7 +54,7 @@
                 <div class="dropdown">
                     <div class="dropdown-container"><a href="javascript:void(0)" class="dropbtn no-move"><span class="img-container"><img src="assets/svg-images/dashboard/account.svg" alt="User" srcset="assets/svg-images/dashboard/account.svg"></span></a>
                         <div class="dropdown-content" id="d2">
-                            <a class="popup--apri --hidden" href="login.html">Accedi</a>
+                            <a class="popup--apri --hidden" href="portal.html">Accedi</a>
                             <a class="logout --hidden" href="javascript:void(0)">Esci</a>
                         </div>
                     </div>
