--- a/progetti-collaborativi/portal.html
+++ b/progetti-collaborativi/portal.html
@@ -70,7 +70,7 @@
 
             <div class="form-login --registrazione">
                 <h2>Registrazione</h2>
-                <form method="post" action="services/register.php">
+                <form method="post" action="services/controllers/register.php">
                     <div class="anagrafica-login">
                         <div class="input-login">
                             <span class="icon"><ion-icon name="person"></ion-icon></span>
